# textcon

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  docs.yml  release.yml
docs/man/: textcon.1  textcon.1.scd
skills/textcon-bundle-codebase/: SKILL.md
skills/textcon-bundle-codebase/agents/: openai.yaml
skills/textcon-bundle-codebase/scripts/: bundle_codebase.py
src/: cli.rs  engine.rs  error.rs  fs_utils.rs  lib.rs  main.rs  parser.rs  render.rs  selector.rs  template.rs
tests/: cli.rs  man.rs  streaming.rs
tests_py/: test_bundle_codebase.py  test_skill_package.py
