[package]
name = "textcon"
version = "0.2.1"
edition = "2024"
authors = ["0x484558 <hex@aleph0.ai>"]
description = "Template text files with file/directory references for AI/LLM consumption"
repository = "https://github.com/0x484558/textcon"
license = "EUPL-1.2"
readme = "README.md"
keywords = ["template", "llm", "ai", "cli", "text-processing"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "textcon"
path = "src/main.rs"

[lib]
name = "textcon"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
thiserror = "2.0"
regex = "1.12"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
