[package]
name = "textcon"
version = "0.4.1"
edition = "2024"
authors = ["0x484558 <hex@aleph0.ai>"]
description = "Streaming file bundling and one-pass template references for AI/LLM context"
repository = "https://github.com/0x484558/textcon"
license = "EUPL-1.2"
readme = "README.md"
keywords = ["template", "llm", "ai", "cli", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
exclude = ["/skills/**", "/tests_py/**"]

[[bin]]
name = "textcon"
path = "src/main.rs"

[lib]
name = "textcon"
path = "src/lib.rs"

[dependencies]
cap-std = "4.0.2"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
ignore = "0.4.25"
same-file = "1.0.6"
thiserror = "2.0"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.5"

[dev-dependencies]
tempfile = "3.24"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"
